# text-finder

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/common/: common.rs
src/file/: file.rs
src/file_reader/: exception.rs  file_reader.rs  mod.rs  result.rs  search.rs  text_finder.rs
src/reactive/: mod.rs  reactive.rs
