[package]
name = "text-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
num_cpus = "1.13.1"
rayon = "1.5.3"
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
